# python-geoaddress

./: .gitignore  README.md  pyproject.toml
django-geoaddress/: README.md  pyproject.toml
django-geoaddress/docs/: AI.md  README.md  development.md  structure.md
django-geoaddress/src/django_geoaddress/: __init__.py  apps.py  fields.py  rest_framework.py  urls.py
django-geoaddress/src/django_geoaddress/admin/: __init__.py  provider.py  service.py  suggest.py
django-geoaddress/src/django_geoaddress/management/commands/: addresses_autocomplete.py  reverse_geocode.py  search_addresses.py
django-geoaddress/src/django_geoaddress/managers/: __init__.py  suggest.py
django-geoaddress/src/django_geoaddress/models/: __init__.py  provider.py  service.py  suggest.py
django-geoaddress/src/django_geoaddress/static/css/: geoaddress_autocomplete.css  geoaddress_index.css  geoaddress_provider.css  geoaddress_suggest.css
django-geoaddress/src/django_geoaddress/static/js/: geoaddress_autocomplete.js
django-geoaddress/src/django_geoaddress/templates/django_geoaddress/: address_detail.html  address_list.html  autocomplete.html  index.html  provider_detail.html  provider_list.html
django-geoaddress/src/django_geoaddress/views/: index.py  provider.py  suggest.py
django-geoaddress/tests/: settings.py  urls.py
django-geoaddress/tests/app/: README.md  __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
django-geoaddress/tests/app/migrations/: 0001_initial.py
django-geoaddress/tests/app/templates/app/: choice.html  location_confirm_delete.html  location_detail.html  location_form.html  location_list.html
django-geoaddress/tests/app/templates/app/django/: list.html  remove.html  update.html
django-geoaddress/tests/app/templates/app/rest/: create.html  list.html  remove.html  update.html
django-geoaddress/tests/static/css/: location-base.css  location-django.css  location-rest.css
docs/: AI.md  README.md  development.md  purpose.md
python-geoaddress/: README.md  pyproject.toml
python-geoaddress/docs/: AI.md
python-geoaddress/src/geoaddress/: __init__.py
python-geoaddress/src/geoaddress/commands/: autocomplete.py  reverse.py  search.py
src/geoaddress/: __init__.py  helpers.py
src/geoaddress/commands/: __init__.py  address.py  autocomplete.py  osm.py  reference.py  reverse.py  search.py
src/geoaddress/providers/: __init__.py  geoapify.py  geocode_earth.py  google.py  here.py  locationiq.py  mapbox.py  maps_co.py  nominatim.py  opencage.py  photon.py
src/geoaddress/providers/base/: __init__.py  confidence.py  relevance.py
